# qradar-mcp-server

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INVENTORY.md  Makefile  QRadar_MCP_Server_Article.md  README.md  SECURITY.md  SETUP_GUIDE.md  TOKEN_USAGE_EXPLAINED.txt  docker-compose.dev.yml  pyproject.toml  qradar-mcp-server-e2e-setup-guide.md  requirements.txt  run.py  setup.sh
.github/: copilot-instructions.md
.github/workflows/: build-container.yml  build-mcp-client.yml  build-push.yml  build.yaml
QRadar-MCP-Server/: QUICKSTART.md
QRadar-MCP-Server/container/: Dockerfile
QRadar-MCP-Server/docs/: ARCHITECTURE.md  README.md
QRadar-MCP-Server/src/: __init__.py  client.py  server.py
container/: Dockerfile
docs/: ARCHITECTURE.md
src/: __init__.py  auth.py  client.py  config.py  discovery.py  oauth.py  server.py  tools.py
