[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qradar-mcp-server"
version = "2.0.0"
description = "QRadar MCP Server - 501 endpoints with 2 tools (GET + DELETE)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Anuj Shrivastava", email = "ashrivastava@ibm.com"}
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
