[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qradar-mcp-server"
version = "2.0.0"
description = "QRadar MCP Server - 728+ QRadar REST API endpoints through 4 intelligent MCP tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Anuj Shrivastava", email = "ashrivastava@in.ibm.com"}
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
